# aws-greengrass-nucleus-rust

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  config.yaml.template
config/: config.yaml.template  effectiveConfig.yaml.template
docs/: architecture.md  design.md
examples/: provision.rs
src/: components_server.rs  config.rs  dependency.rs  easysetup.rs  es.rs  fss.rs  greengrassv2.rs  http.rs  iot.rs  lib.rs  main.rs  mqtt.rs  provisioning.rs  status.rs  util.rs
src/provisioning/: greengrassv2.rs  iot.rs  mod.rs
src/services/: deployment.rs  kernel.rs  main.rs  mod.rs  policy.rs  status.rs  telemetry.rs
