[package]
name = "aws-greengrass-nucleus"
version = "0.0.2"
authors = ["Aaron Tsui <kaixu@amazon.com>"]
edition = "2021"
rust-version = "1.56"
description = "aws greengrass nucleus in Rust (unofficial)"
documentation = "https://docs.aws.amazon.com/greengrass/"
readme = "README.md"
homepage = "https://https://aws.amazon.com/greengrass/"
repository = "https://github.com/awsa2ron/aws-greengrass-nucleus-rust"
license = "MIT"
keywords = ["aws", "iot", "edge", "embedded"]
categories = [
    "embedded",
    "command-line-utilities",
    "wasm"
]
# workspace = "path/to/workspace/root"
# build = "build.rs"
# links = "foo"
# exclude = ["/ci", "images/", ".*"]
# include = ["/src", "COPYRIGHT", "/examples", "!/examples/big_example"]
# publish = ["aws-greengrass-nucleus"]
# default-run = "main"

# [package.metadata.android]
# package-name = "my-awesome-android-app"
# assets = "path/to/static"


[dependencies]
aws-types = "0.14.0"
aws-config = "0.14.0"
aws-sdk-iot = "0.14.0"
aws-sdk-greengrassv2 = "0.14.0"
rumqttc = "0.13"
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.0"
toml = "0.5"
anyhow = "1.0"
dashmap = "5"
