[package]
name = "aws-greengrass-nucleus"
version = "0.0.3"
authors = ["Aaron Tsui <kaixu@amazon.com>"]
edition = "2021"
description = "aws greengrass nucleus in Rust (unofficial)"
documentation = "https://docs.aws.amazon.com/greengrass/"
readme = "README.md"
homepage = "https://https://aws.amazon.com/greengrass/"
repository = "https://github.com/awsa2ron/aws-greengrass-nucleus-rust"
license = "MIT"
keywords = ["aws", "iot", "edge", "embedded"]
categories = [
    "embedded",
    "command-line-utilities",
    "wasm"
]

[dependencies]
aws-types = "0.48.0"
aws-config = "0.48.0"
aws-sdk-iot = "0.18.0"
aws-sdk-greengrassv2 = "0.18.0"
rumqttc = "0.15"
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.0"
toml = "0.5"
anyhow = "1"
dashmap = "5"

[profile.release]
strip = "debuginfo"
