[package]
name = "aws-greengrass-nucleus"
version = "0.0.7"
authors = ["Aaron Tsui <kaixu@amazon.com>"]
edition = "2021"
description = "aws greengrass nucleus in Rust (unofficial)"
documentation = "https://docs.aws.amazon.com/greengrass/"
readme = "README.md"
homepage = "https://https://aws.amazon.com/greengrass/"
repository = "https://github.com/awsa2ron/aws-greengrass-nucleus-rust"
license = "MIT"
keywords = ["aws", "iot", "edge", "embedded"]
categories = [
    "embedded",
    "command-line-utilities",
    "wasm"
]

[dependencies]
aws-types = "0.48.0"
aws-config = "0.48.0"
aws-sdk-s3 = "0.18.0"
aws-sdk-iot = "0.18.0"
aws-sdk-greengrassv2 = "0.18.0"
rumqttc = "0.16"
tokio = { version = "1", features = ["full"] }
clap = { version = "3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
once_cell = "1.0"
anyhow = "1"
dashmap = "5"
aws-iot-device-sdk = "0.0.6"
bytes = "1.2.1"
thiserror = "1.0.34"

[profile.release]
strip = true # Strip symbols from the binary
opt-level = "s" # Optimize for size
lto = true # Enable link time optimization
codegen-units = 1 # Maximize size reduction optimizations
